--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.16.2",
     "body-parser": "^1.18.1",
     "cors": "^2.8.4",
+    "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "express-session": "^1.15.5",
     "massive": "^4.0.0",
@@ -25,7 +26,12 @@
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "now --public --dotenv=.env -d",
+    "now-start": "node server/server.js"
+  },
+  "now":{
+    "alias":"KanjiPower"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
   "main": "./server/server.js",
